--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head>  @@include('./includes/_head.html')</head><body>  @@include('./components/_navbar.html')  @@include('./includes/_scripts.html')</body></html>
+<!doctype html><html lang="en"><head>  @@include('./includes/_head.html')</head><body>  @@include('./components/_navbar.html')  @@include('./components/_home-slider.html')  @@include('./components/_sponsers.html')  @@include('./includes/_scripts.html')</body></html>
