--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -1,7 +1,12 @@
-body{
-  margin: 0;
-  h1{
-    background-color: aqua;
-    padding: 20px;
-  }
-}
+@import "helpers/variables";
+@import "helpers/mixin";
+
+@import "layout/global";
+
+@import "components/navbar";
+@import "components/home-slider";
+@import "components/sponsers";
+
+@import "layout/footer";
+
+
