--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -3,9 +3,11 @@
 
 @import "layout/global";
 
+@import "components/button";
 @import "components/navbar";
 @import "components/home-slider";
 @import "components/sponsers";
+@import "components/user-interface";
 
 @import "layout/footer";
 
