--- a/src/template/components/_home-slider.html
+++ b/src/template/components/_home-slider.html
@@ -3,42 +3,52 @@
   <div class="row home-slider align-items-center">
 
 
-    <div class="col-sm-6 position-absolute">
+    <div class="col-sm-9 col-lg-7 col-xl-6 position-absolute">
       <div id="home-slider" class="carousel slide carousel-fade" data-ride="carousel">
 
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="carousel-caption text-dark text-left">
-              <h5 class="h3">
-                First Slide “I’ve worked with dozens of designers
+
+            <div class="carousel-caption text-left">
+              <h5 class="h1">
+                “I’ve worked with dozens of designers
                 over the decades and Gui is at the top.”
               </h5>
-              <p>Brian Ericksson</p>
-              <div>CEO - Cardwell Beach</div>
-              <div>New York City, US</div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="carousel-caption text-left text-dark">
-              <h5 class="h3">
-                Second Slide “I’ve worked with dozens of designers
-                over the decades and Gui is at the top.”
-              </h5>
-              <p>Brian Ericksson</p>
-              <div>CEO - Cardwell Beach</div>
+              <p class="h4 text-main-color">Brian Ericksson</p>
+              <div>
+                CEO - Cardwell Beach
+              </div>
               <div>
                 New York City, US
               </div>
             </div>
-          </div>
-          <div class="carousel-item">
 
-            <div class="carousel-caption text-left text-dark">
-              <h5 class="h3">
-                Third Slide “I’ve worked with dozens of designers
+          </div>
+          <div class="carousel-item ">
+
+            <div class="carousel-caption text-left">
+              <h5 class="h1">
+                “I’ve worked with dozens of designers
                 over the decades and Gui is at the top.”
               </h5>
-              <p>Brian Ericksson</p>
+              <p class="h4 text-main-color">Brian Ericksson</p>
+              <div>
+                CEO - Cardwell Beach
+              </div>
+              <div>
+                New York City, US
+              </div>
+            </div>
+
+          </div>
+          <div class="carousel-item ">
+
+            <div class="carousel-caption text-left">
+              <h5 class="h1">
+                “I’ve worked with dozens of designers
+                over the decades and Gui is at the top.”
+              </h5>
+              <p class="h4 text-main-color">Brian Ericksson</p>
               <div>
                 CEO - Cardwell Beach
               </div>
