--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -12,8 +12,19 @@ $max-lg: 1199.98px;
 // Colors
 $main-color: #23282E;
 $primary-color: #2FCCF6;
+$font-color: #1B1F23;
 
 $slider-bullet-color: #E4ECEE;
 $slider-border-color: #979797;
 
 $sponser-color: #F3F6F6;
+
+// Font-sizes
+$h1-font-size: 3rem;
+$h2-font-size: 2.5rem;
+$h3-font-size: 1.5rem;
+$h4-font-size: 1.125rem;
+$p-font-size: 1.5rem;
+$btn-font-size: 1rem;
+$div-font-size: 1rem;
+$span-font-size: 0.875rem;
