add anew section 2

--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -8,6 +8,9 @@
 @import "components/home-slider";
 @import "components/sponsers";
 @import "components/user-interface";
+@import "components/platform";
+@import "components/client-comment";
+
 
 @import "layout/footer";
 
