--- a/src/scss/components/_user-interface.scss
+++ b/src/scss/components/_user-interface.scss
@@ -10,7 +10,7 @@ Start User Interface*/
     margin-bottom: 2.5rem;
   }
   .card {
-    //border: none;
+    border: none;
     margin-bottom: 2rem;
     padding: 3.5rem 0;
     img {
