--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -19,6 +19,8 @@ $slider-border-color: #979797;
 
 $sponser-color: #F3F6F6;
 
+$icon-star-color: #6DDE54;
+
 // Font-sizes
 $h1-font-size: 3rem;
 $h2-font-size: 2.5rem;
