--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -13,6 +13,7 @@ $max-lg: 1199.98px;
 $main-color: #23282E;
 $primary-color: #2FCCF6;
 $font-color: #1B1F23;
+$text-muted: #BEC1C5;
 
 $slider-bullet-color: #E4ECEE;
 $slider-border-color: #979797;
