--- a/src/template/components/_client-comment.html
+++ b/src/template/components/_client-comment.html
@@ -1,20 +1,22 @@
 <!--Start Client Comments-->
-<div class="client-comments">
+<div class="client-comments text-md-left text-center">
   <div class="container">
-    <div class="card mb-3">
-      <div class="row no-gutters">
-        <div class="col-md-4">
-          <img src="images/client.png" alt="..." height="114" width="114" />
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
+
+    <div class="row justify-content-center">
+      <div class="col-md-4">
+        <img src="images/client.png" alt="..." height="114" width="114" />
+      </div>
+      <div class="col-md-8">
+        <p class="p">“Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique
+                     and crips
+           design for our elearning app.”
+        </p>
+        <div class="text-main-color h4">Christian M. Leupold-Wendling</div>
+        <div class="span text-muted">CEO - Jurafuchs</div>
+        <div class="span text-muted">Berlin, Germany</div>
       </div>
     </div>
+
   </div>
 </div>
 <!--End Client Comments-->
