add a new section secondary slider

--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -10,6 +10,7 @@
 @import "components/user-interface";
 @import "components/platform";
 @import "components/client-comment";
+@import "components/slider-secondary";
 
 
 @import "layout/footer";
