add new section getting touch and footer

--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -11,7 +11,7 @@
 @import "components/platform";
 @import "components/client-comment";
 @import "components/slider-secondary";
-
+@import "components/getting-touch";
 
 @import "layout/footer";
 
