--- a/src/template/includes/_head.html
+++ b/src/template/includes/_head.html
@@ -7,4 +7,5 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/main-style.min.css">
