--- a/src/scss/components/_slider-secondary.scss
+++ b/src/scss/components/_slider-secondary.scss
@@ -1,7 +1,7 @@
 /*
 Start Slider Secondary*/
 .slider-secondary{
-
+overflow: hidden;
   padding: 15rem 0 4rem;
   .carousel-inner {
     overflow: initial;
