--- a/src/template/components/_getting-touch.html
+++ b/src/template/components/_getting-touch.html
@@ -28,7 +28,7 @@
                       placeholder="Type here=)"></textarea>
           </div>
 
-          <button type="submit" class="btn btn-outline-primary">Submit</button>
+          <button type="submit" class="btn mt-5 mb-1 btn-outline-primary">Submit</button>
         </form>
       </div>
     </div>
