--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,5 +1,5 @@
 .btn {
-  padding: 0.8rem 2.5rem;
+  padding: 0.7rem 2rem;
   border-radius: 2rem;
 }
 
@@ -12,4 +12,10 @@
     background-color: $primary-color;
     border-color: $primary-color;
   }
+}
+
+
+.btn-sm {
+  padding: 0.4rem 1.5rem;
+  border-radius: 1.5rem;
 }
