--- a/src/scss/components/_getting-touch.scss
+++ b/src/scss/components/_getting-touch.scss
@@ -12,6 +12,11 @@ Start Getting Touch*/
     font-family: 'Roboto', sans-serif;;
     border-radius: 10px;
     padding: 3rem 2.5rem 2.5rem 2.5rem;
+    .btn{
+        max-width: 100%;
+        margin: auto;
+        display: block;
+    }
   }
 }
 /*
