--- a/src/scss/components/_user-interface.scss
+++ b/src/scss/components/_user-interface.scss
@@ -18,6 +18,9 @@ Start User Interface*/
     }
     .card-body {
       padding: 0 2.5rem;
+      @media (max-width: $max-lg) {
+        padding: 0 1.5rem;
+      }
     }
   }
   .card-up {
