--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,16 +1,70 @@
 /*
 Start Footer*/
-.footer{
+.footer {
   position: relative;
   background-color: $main-color;
+  color: #ffffff;
   padding: 6rem 0 4rem;
-  .line{
+
+  .line {
     position: absolute;
     left: 0;
     right: 0;
     top: 30px;
     border: 1px solid #979797;
   }
+
+  a {
+    &:hover {
+      color: $primary-color;
+    }
+  }
+
+  .span {
+    margin-bottom: 7px;
+    display: block;
+  }
+
+  .list-unstyled {
+    li {
+      padding: 5px;
+
+      a {
+        color: #ffffff;
+
+        &:hover,
+        &:active {
+          color: $primary-color;
+        }
+      }
+    }
+
+  }
+
+  form {
+    .form-control {
+      max-width: 280px;
+    }
+  }
+
+  .social {
+
+    .fa {
+      width: 2rem;
+      text-align: center;
+      float: right;
+      margin-left: 10px;
+      background-color: $primary-color;
+      color: #000000;
+      padding: 0.25em;
+      font-size:20px;
+      margin-bottom: 10px;
+      &:hover {
+        color: #ffffff;
+      }
+    }
+  }
 }
+
 /*
 End Footer*/
