--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -52,7 +52,7 @@ Start Footer*/
     .fa {
       width: 2rem;
       text-align: center;
-      float: right;
+      //float: right;
       margin-left: 10px;
       background-color: $primary-color;
       color: #000000;
