--- a/src/template/includes/_footer.html
+++ b/src/template/includes/_footer.html
@@ -1,14 +1,14 @@
 <!--Start Footer-->
-<footer class="footer">
+<footer class="footer text-center text-sm-left">
   <div class="line"></div>
   <div class="container">
     <div class="row justify-content-center">
       <div class="mb-5 col-sm-9 col-md-6 col-lg-4">
         <div class="row no-gutters">
-          <div class="col-3">
-            <img src="images/logo-footer.png" height="66" width="66" />
+          <div class="col-sm-3">
+            <img src="images/logo-footer.png" class="mb-3" height="66" width="66" />
           </div>
-          <div class="col-9">
+          <div class="col-sm-9">
             <div class="h4 mb-4">
               Guilherme <br>
               Ferreira
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="mb-5 col-sm-3 col-md-6 col-lg-2">
-        <ul class="list-unstyled">
+        <ul class="list-unstyled text-sm-right text-lg-left">
           <li>
             <a href="#">About</a>
           </li>
@@ -42,22 +42,22 @@
         <form>
           <div class="form-group">
             <label for="email-subscribe" class="div">Get the latest news:</label>
-            <input type="text" class="form-control" name="email-subscribe" id="email-subscribe"
+            <input type="text" class="form-control m-auto m-sm-0" name="email-subscribe" id="email-subscribe"
                    placeholder="Your email here">
           </div>
 
-          <button type="submit" class="btn btn-sm  btn-outline-primary span">Subscribe</button>
+          <button type="submit" class="btn btn-sm m-auto m-sm-0 btn-outline-primary span">Subscribe</button>
         </form>
       </div>
       <div class="mb-5 col-sm-4 col-lg-2">
-          <div class="div text-right mb-3">Looking forward to connect with you:</div>
+          <div class="div text-sm-right mb-3">Looking forward to connect with you:</div>
         <!--      Start Social-->
         <div class="social">
-          <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-          <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-          <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-          <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-behance  float-sm-right" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-dribbble  float-sm-right" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-whatsapp  float-sm-right" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-instagram  float-sm-right" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-linkedin  float-sm-right" aria-hidden="true"></i></a>
         </div>
         <div class="clearfix"></div>
       </div>
