--- a/src/scss/components/_home-slider.scss
+++ b/src/scss/components/_home-slider.scss
@@ -1,42 +1,76 @@
 /*Start Home Slider*/
 .home-slider {
-  position : relative;
+  position: relative;
   overflow: hidden;
   @media (max-width: $max-med) {
     align-items: start !important;
   }
 
-  .carousel-indicators {
-    bottom: -7em;
-    right           : initial;
-    justify-content : start;
-    padding-left    : 0;
-    margin-right    : initial;
-    margin-left     : 0;
-
-    li {
-      border           : 1px solid transparent;
-      background-color : $slider-bullet-color;
-      opacity          : 1;
-      width            : 1em;
-      height           : 1em;
-      border-radius    : 50%;
-
-      &.active, &:hover, &:focus {
-        background-color : $primary-color;
-        border-color     : $slider-border-color;
-      }
+  & > div:first-child {
+    position: absolute;
+    @media (max-width: $max-xs) {
+      position: initial;
     }
   }
 
-  .carousel-item {
-    .carousel-caption {
-      position : static;
-      color: $font-color;
-      .h1 {
-        margin-bottom: 38px;
+  .carousel {
+    .carousel-indicators {
+      bottom: -7em;
+      right: initial;
+      justify-content: start;
+      padding-left: 0;
+      margin-right: initial;
+      margin-left: 0;
+      @media (max-width: $max-lg) {
+        bottom: -5em;
+      }
+      @media (max-width: $max-sm) {
+        bottom: -3em;
+      }
+      @media (max-width: $max-xs) {
+        bottom: 0;
+        right: 0;
+        justify-content: center;
+        margin-right: auto;
+        margin-left: auto;
+      }
+
+      li {
+        border: 1px solid transparent;
+        background-color: $slider-bullet-color;
+        opacity: 1;
+        width: 1em;
+        height: 1em;
+        border-radius: 50%;
+
+        &.active, &:hover, &:focus {
+          background-color: $primary-color;
+          border-color: $slider-border-color;
+        }
+      }
+    }
+
+    .carousel-item {
+      .carousel-caption {
+        position: static;
+        color: $font-color;
+        @media (max-width: $max-med) {
+          padding-top: 50px;
+        }
+        @media (max-width: $max-xs) {
+          padding-top: 20px;
+          padding-bottom: 50px;
+        }
+
+        .h1 {
+          margin-bottom: 38px;
+          @media (max-width: $max-sm) {
+            margin-bottom: 20px;
+          }
+        }
       }
     }
   }
 }
+
 /*End Home Slider*/
