--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -32,3 +32,9 @@ $p-font-size: 1.5rem;
 $btn-font-size: 1rem;
 $div-font-size: 1rem;
 $span-font-size: 0.875rem;
+
+$ratio-font-lg: 0.83;
+$ratio-font-med: 0.64;
+$ratio-font-sm: 0.48;
+$ratio-font-xs: 0.35;
+
