--- a/src/template/components/_home-slider.html
+++ b/src/template/components/_home-slider.html
@@ -3,8 +3,20 @@
   <div class="row home-slider align-items-center">
 
 
-    <div class="col-sm-9 col-lg-7 col-xl-6 position-absolute">
+    <div class="col-sm-6 col-md-6">
       <div id="home-slider" class="carousel slide carousel-fade" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#home-slider" data-slide-to="0" class="active"></li>
+          <li data-target="#home-slider" data-slide-to="1"></li>
+          <li data-target="#home-slider" data-slide-to="2"></li>
+          <li data-target="#home-slider" data-slide-to="3"></li>
+          <li data-target="#home-slider" data-slide-to="4"></li>
+          <li data-target="#home-slider" data-slide-to="5"></li>
+          <li data-target="#home-slider" data-slide-to="6"></li>
+          <li data-target="#home-slider" data-slide-to="7"></li>
+          <li data-target="#home-slider" data-slide-to="8"></li>
+          <li data-target="#home-slider" data-slide-to="9"></li>
+        </ol>
 
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -60,24 +72,11 @@
           </div>
         </div>
 
-        <ol class="carousel-indicators">
-          <li data-target="#home-slider" data-slide-to="0" class="active"></li>
-          <li data-target="#home-slider" data-slide-to="1"></li>
-          <li data-target="#home-slider" data-slide-to="2"></li>
-          <li data-target="#home-slider" data-slide-to="3"></li>
-          <li data-target="#home-slider" data-slide-to="4"></li>
-          <li data-target="#home-slider" data-slide-to="5"></li>
-          <li data-target="#home-slider" data-slide-to="6"></li>
-          <li data-target="#home-slider" data-slide-to="7"></li>
-          <li data-target="#home-slider" data-slide-to="8"></li>
-          <li data-target="#home-slider" data-slide-to="9"></li>
-          <li data-target="#home-slider" data-slide-to="10"></li>
-          <li data-target="#home-slider" data-slide-to="11"></li>
-        </ol>
+
       </div>
     </div>
 
-    <div class="col-12">
+    <div class="col-12 d-none d-sm-block">
       <img src="images/gb.png" class="img-fluid" />
     </div>
   </div>
