--- a/src/scss/components/_client-comment.scss
+++ b/src/scss/components/_client-comment.scss
@@ -18,6 +18,12 @@ Start Client Comments*/
   .p {
     font-size: 21px;
     font-weight: 700;
+    @media (max-width: $max-med) {
+      font-size: 18px;
+    }
+    @media (max-width: $max-xs) {
+      font-size: 16px;
+    }
   }
 }
 /*
