--- a/src/template/components/_slider-secondary.html
+++ b/src/template/components/_slider-secondary.html
@@ -15,7 +15,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="col-9">
-            <img src="images/slider_1.png" class="img-fluid" />
+            <img src="images/slider_1.png" class="img-fluid d-none d-sm-block" />
           </div>
           <div class="carousel-caption">
             <h5 class="h2 float-right">A World-class project created for Mercedes Benz Research and Development North America
@@ -29,7 +29,7 @@
         </div>
         <div class="carousel-item">
           <div class="col-9">
-            <img src="images/slider_1.png" class="img-fluid" />
+            <img src="images/slider_1.png" class="img-fluid d-none d-sm-block" />
           </div>
           <div class="carousel-caption">
             <h5 class="h2 float-right">A World-class project created for Mercedes Benz Research and Development North America
@@ -43,7 +43,7 @@
         </div>
         <div class="carousel-item">
           <div class="col-9">
-            <img src="images/slider_1.png" class="img-fluid" />
+            <img src="images/slider_1.png" class="img-fluid d-none d-sm-block" />
           </div>
           <div class="carousel-caption">
             <h5 class="h2 float-right">A World-class project created for Mercedes Benz Research and Development North America
