first stable version

--- a/src/scss/components/_slider-secondary.scss
+++ b/src/scss/components/_slider-secondary.scss
@@ -52,6 +52,7 @@ Start Slider Secondary*/
   }
 
   .carousel-indicators {
+    z-index: 51;
     @media (max-width: $max-sm) {
       bottom: -20px;
     }
