--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -2,6 +2,7 @@
 @import "helpers/mixin";
 
 @import "layout/global";
+@import "layout/fonts";
 
 @import "components/button";
 @import "components/navbar";
