add anew section

--- a/src/scss/components/_platform.scss
+++ b/src/scss/components/_platform.scss
@@ -7,7 +7,7 @@ Start Freelancing Platform*/
 
 .platform {
   text-align: center;
-
+  padding: 35px 0;
   .fa-star {
     color: $icon-star-color;
   }
