--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -14,4 +14,8 @@
 @import "components/slider-secondary";
 @import "components/getting-touch";
 
+@import "components/client-opinion";
+
+
+
 @import "layout/footer";
