--- a/src/template/about.html
+++ b/src/template/about.html
@@ -12,15 +12,18 @@
 <body>
   @@include('./components/_navbar.html')
 
-<!--  @@include('./components/_home-slider.html')-->
+  @@include('./pages/about/_client-opinion.html')
 
 <!--  @@include('./components/_sponsers.html')-->
 
 <!--  @@include('./components/_user-interface.html')-->
 
-  @@include('./components/_platform.html')
+  <div class="bg-light">
+    @@include('./components/_platform.html')
+  </div>
 
-  @@include('./components/_client-comment.html')
+
+  @@include('./pages/about/_client-comment-about.html')
 
   @@include('./components/_slider-secondary.html')
 
