--- a/src/template/components/_platform.html
+++ b/src/template/components/_platform.html
@@ -12,7 +12,7 @@
             <i class="fa fa-star" aria-hidden="true"></i>
           </div>
           <img src="images/upwork.png" class="mb-3" height="34" width="111" />
-          <div class="span mb-5">
+          <div class="span">
             Top Rated Designer
             100% Job Successful
           </div>
@@ -21,7 +21,7 @@
       <div class="col-sm">
         <div class="gas">
           <img src="images/GAS.png" class="mb-3" height="48" width="142" />
-          <div class="span mb-5">
+          <div class="span">
             Inside the Mind of
             Brilliant Designers
           </div>
@@ -30,7 +30,7 @@
       <div class="col-sm">
         <div class="insight">
           <img src="images/insight.png" class="mb-4" height="33" width="171" />
-          <div class="span mb-5">
+          <div class="span">
             10 Leaders to Watch
             in 2018
           </div>
