--- a/src/template/about.html
+++ b/src/template/about.html
@@ -14,7 +14,7 @@
 
   @@include('./pages/about/_client-opinion.html')
 
-<!--  @@include('./components/_sponsers.html')-->
+  @@include('./pages/about/_gd.html')
 
 <!--  @@include('./components/_user-interface.html')-->
 
