--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -10,6 +10,9 @@
   }
 
   .nav-item {
+    &.active > .nav-link {
+      color : $primary-color;
+    }
     .nav-link {
       color : $font-color;
 
