--- a/src/template/portfolio.html
+++ b/src/template/portfolio.html
@@ -5,31 +5,20 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About | GFD</title>
+  <title>Portfolio | GFD</title>
 
   @@include('./includes/_head.html')
 </head>
 <body>
   @@include('./components/_navbar.html')
 
-  @@include('./pages/about/_client-opinion.html')
-
-  @@include('./pages/about/_gd.html')
-
-
-  <div class="bg-light">
-    @@include('./components/_platform.html')
-  </div>
-
+  @@include('./pages/portfolio/_portfolio-header.html')
 
   @@include('./pages/about/_client-comment-about.html')
-
-  @@include('./components/_slider-secondary.html')
 
   @@include('./components/_getting-touch.html')
 
   @@include('./includes/_footer.html')
-
 
   @@include('./includes/_scripts.html')
 </body>
