add a new section

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -14,6 +14,8 @@ $main-color: #23282E;
 $primary-color: #2FCCF6;
 $font-color: #1B1F23;
 $text-muted: #BEC1C5;
+$text-grey: #676B70;
+$text-btn-project: #3C3F43;
 
 $slider-bullet-color: #E4ECEE;
 $slider-border-color: #979797;
@@ -37,4 +39,14 @@ $ratio-font-lg: 0.83;
 $ratio-font-med: 0.64;
 $ratio-font-sm: 0.48;
 $ratio-font-xs: 0.35;
+
+$font-medium: 500;
+$font-semi-bold: 600;
+$font-extra-bold: 800;
+
+// Golden Ratios
+$ratio-lg: 0.83;
+$ratio-med: 0.64;
+$ratio-sm: 0.48;
+$ratio-xs: 0.35;
 
