--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -22,6 +22,7 @@
 
 // Portfolio Page
 @import "components/portfolio-header";
+@import "components/projects-involved";
 
 
 @import "layout/footer";
