--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -11,6 +11,7 @@
     color: #fff;
     background-color: $primary-color;
     border-color: $primary-color;
+    transition: 0.2s all ease-in-out;
   }
 }
 
