--- a/src/template/portfolio.html
+++ b/src/template/portfolio.html
@@ -13,6 +13,7 @@
   @@include('./components/_navbar.html')
 
   @@include('./pages/portfolio/_portfolio-header.html')
+  @@include('./pages/portfolio/_projects-involved.html')
 
   @@include('./pages/about/_client-comment-about.html')
 
