--- a/src/template/pages/portfolio/_projects-involved.html
+++ b/src/template/pages/portfolio/_projects-involved.html
@@ -105,7 +105,47 @@
         </div>
       </div>
 
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="content">
+          <img src="images/project-app-schoolaz.png" height="42" width="132" />
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="content">
+          <img src="images/project-app-greenback.png" height="46" width="162" />
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="content">
+          <img src="images/project-app-agco.png" height="37" width="146" />
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="content">
+          <img src="images/project-app-buildfire.png" height="32" width="130" />
+        </div>
+      </div>
 
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="content">
+          <img src="images/project-app-crewhu.png" height="52" width="120" />
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="content">
+          <img src="images/project-app-centegix.png" height="36" width="154" />
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="content">
+          <img src="images/project-app-smartwash.png" height="36" width="144" />
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="content">
+          <img src="images/project-app-liveglam.png" height="66" width="174" />
+        </div>
+      </div>
 
 
     </div>
