--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -24,5 +24,7 @@
 @import "components/portfolio-header";
 @import "components/projects-involved";
 
+//Testimonials
+@import "components/testimonial-body";
 
 @import "layout/footer";
