--- a/src/template/components/_navbar.html
+++ b/src/template/components/_navbar.html
@@ -20,7 +20,7 @@
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link" href="#">Testimonials</a>
+          <a class="nav-link" href="testimonials.html">Testimonials</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
